--- a/index.html
+++ b/index.html
@@ -5,23 +5,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover" />
+    <meta name="theme-color" content="#007aff" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <title>RepairFlix</title>
+    <meta name="description"
+        content="RepairFlix is an app that allows users to search for repair shops and view their services." />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="./css/framework7.bundle.min.css" />
     <link rel="stylesheet" href="./css/app.css" />
+    <link rel="stylesheet" href="./css/icons.css" />
+    <link rel="stylesheet" href="./css/mapbox-gl.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/mapbox-gl-geocoder.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!--script>
+        if ("serviceWorker" in navigator) {
+            window.addEventListener("load", () => {
+                navigator.serviceWorker.register("/sw.js");
+            });
+        }
+    </script-->
 </head>
 
 <body>
     <div id="app">
         <div class="views safe-areas" id="app-view">
-            <div id="div1" class="view view-main view-init">
-                <div class="page">
-                   
-                </div>
-            </div>
+            <div class="view view-main view-init"></div>
         </div>
+        <a class="display-none" data-transition="f7-circle" href="/login/" data-view=".view-main" id="login">a</a>
+        <a class="display-none" data-transition="f7-circle" href="/customer/" data-view=".view-main" id="customer">b</a>
+        <a class="display-none" data-transition="f7-circle" href="/servicecentre/" data-view=".view-main"
+            id="scentre">c</a>
     </div>
-    <script src="./js/jquery-3.6.0.min.js"></script>
-    <script defer src="./js/framework7.bundle.min.js"></script>
+    <script defer src="./js/firebase/firebase-app.js"></script>
+    <script defer src="./js/modules/framework7.bundle.min.js"></script>
     <script defer src="./js/routes.js"></script>
+    <script defer src="./js/modules/mapbox-gl.js"></script>
+    <script src="./js/modules/mapbox-gl-geocoder.min.js"></script>
+    <script defer src="./js/modules/turf.min.js"></script>
     <script defer src="./js/app.js"></script>
 </body>
 
